# advent-of-code

./: README.md
2015/day-1/: aoc.py
2015/day-2/: aoc.py
2015/day-3/: aoc.py
2015/day-4/: aoc.py
2015/day-5/: aoc.py
2015/day-6/: aoc.py
2015/day-7/: aoc.py
2019/: .gitignore  create.fish
2020/day-10/: Cargo.toml
2020/day-15/: Cargo.toml
2020/day-16/: Cargo.toml
2020/day-17/: Cargo.toml  input.txt
2020/day-19/: Cargo.toml  regexp.txt
2020/day-21/: Cargo.toml  main.py
2020/day-22/: main.py
2020/day-3/: Cargo.toml
2020/day-4/: Cargo.toml
2020/day-5/: Cargo.toml
2020/day-6/: Cargo.toml
2020/day-7/: Cargo.toml
2020/day-9/: Cargo.toml
2020/gcd/: Cargo.toml
2020/mandelbrot/: Cargo.toml
2021/: create.fish
2021/day1/: Cargo.toml
2021/day11/: Cargo.toml
2021/day12/: graph-2.py  graph.py
2021/day13/: Cargo.toml
2021/day15/: Cargo.toml
2021/day16/: Cargo.toml
2021/day18/: main.py
2021/day20/: Cargo.toml
2021/day22/: main.py
2021/day23/: Cargo.toml
2021/day23/src/: main.rs  main2.rs
2021/day24/: main.py  test_mul.py  z3_version.py
2022/day-21/: Cargo.toml  aoc.py  full_input2.txt
2022/day-21/src/: main.rs
2025/: .gitignore  01-2.ua  01.ua
day-1/: Cargo.toml
day-11/: Cargo.toml
day-12/: Cargo.toml
day-13/: Cargo.toml
day-14/: Cargo.toml
day-18/: Cargo.toml
day-19/: rules.txt
day-2/: Cargo.toml
day-20/: main.py
day-21/: main.py
day-22/: main.py
day-23/: main.py
day-4/: Cargo.toml
day-7/: Cargo.toml  graph.dot
day-8/: Cargo.toml
python-cookiecutter/: cookiecutter.json
(+145 files in other folders)
