[package]
name = "day23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
pathfinding = "3.0.5"

[[bin]]
name = "main1"
path = "src/main.rs"

[[bin]]
name = "main2"
path = "src/main2.rs"