[package]
name = "day-21r"
version = "0.1.0"
edition = "2021"

[dependencies]
gcollections = "1.5.0"
intervallum = "1.4.0"
# array2d = "0.2.1"
# grid = "0.6.0"
itertools = "0.10.3"
libpcp = { git = "https://github.com/alper/pcp", version = "0.6.4" }
# nom = "7.1.1"
# rayon = "1.6.1"
# toodee = "0.3.0"
# pathfinding = "4.0.0"

[dev-dependencies]
test-case = "2.2.2"
